force-app/main/default/objects/MPM4_BASE__TH_Weekly_Comments__c/MPM4_BASE__TH_Weekly_Comments__c.object-meta.xml
<CustomObject>
    <label>Time Entry Weekly Comment</label>
    <nameField>
        <displayFormat>Comment-{000000}</displayFormat>
        <label>Comment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time Entry Weekly Comments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>