force-app/main/default/objects/MPM4_BASE__TH_Weekly_Comments__c/fields/MPM4_BASE__Comment__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Comment__c</fullName>
    <label>Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>