force-app/main/default/objects/MPM4_BASE__TH_Weekly_Comments__c/fields/MPM4_BASE__Time_Entry__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Time_Entry__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Time Entry</label>
    <referenceTo>MPM4_BASE__TH_TimeEntry__c</referenceTo>
    <relationshipLabel>Time Entry Weekly Comments</relationshipLabel>
    <relationshipName>Time_Entry_Weekly_Comments</relationshipName>
    <type>Lookup</type>
</CustomField>