force-app/main/default/objects/MPM4_BASE__TH_Weekly_Comments__c/fields/MPM4_BASE__Week_Of__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Week_Of__c</fullName>
    <label>Week Of</label>
    <type>Date</type>
</CustomField>